--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -36,5 +36,11 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: dist-files
+      - name: Show files
+        run: ls -lah
       - name: Deploy
         run: echo "Deploying..."
